--- a/health_parent/health_backend/src/main/webapp/WEB-INF/web.xml
+++ b/health_parent/health_backend/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     version="2.5">
   <display-name>health_backend</display-name>
   <welcome-file-list>
-  	<welcome-file>html/Header.html</welcome-file>
+  	<welcome-file>pages/main.html</welcome-file>
   </welcome-file-list>
    <!-- 解决post乱码 -->
 	<filter>
